namespace CustomLib.Models.Comments
{
    public class CommentPut
    {
        public string Text { get; set; } = "";
    }
}
