namespace CustomLib.Models.Issues
{
    public class IssuePost : IssuePut
    {
        public string UserId { get; set; } = "";
    }
}
